--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,18 @@
     
 
     </properties>
+         <distributionManagement>
+  <repository>
+    <id>maven-releases</id>
+    <!-- CHANGE HERE by your team Nexus server -->
+    <url>http://13.126.124.159:8081/repository/maven-releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>maven-snapshots</id>
+    <!-- CHANGE HERE by your team Nexus server -->
+    <url>http://13.126.124.159:8081/repository/maven-releases/</url>
+  </snapshotRepository>
+</distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -584,6 +596,11 @@
             <name>Spring Milestone Repository</name>
             <url>https://repo.spring.io/milestone</url>
         </repository>
+             <repository>
+  <id>maven-releases</id>
+  <name>maven-releases</name>
+  <url>http://51.20.181.216:8081/repository/maven-releases/</url>
+</repository>
     </repositories>
 
 </project>
